--- a/Z01_python_introduction.ipynb
+++ b/Z01_python_introduction.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -182,12 +182,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the intersection of these circles IS NOT empty\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "x1, y1, r1 = map(int, input(\"Enter x1, y1, r1: \").split())\n",
+    "x2, y2, r2 = map(int, input(\"Enter x2, y2, r2: \").split())\n",
+    "\n",
+    "dist = math.dist([x1, y1], [x2, y2])\n",
+    "\n",
+    "if dist > r1 + r2:\n",
+    "    print(\"The intersection of these circles IS empty\")\n",
+    "else:\n",
+    "    print(\"the intersection of these circles IS NOT empty\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -443,12 +463,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "test\n",
+      "test2\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    x = input()\n",
+    "    if x == \"stop\":\n",
+    "        break\n",
+    "    print(x)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -477,12 +513,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10101\n",
+      "01010\n",
+      "10101\n",
+      "01010\n",
+      "10101\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "m = 5\n",
+    "\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if (i + j) % 2 == 0:\n",
+    "            print(\"1\", end=\"\")\n",
+    "        else:\n",
+    "            print(\"0\", end=\"\")\n",
+    "    print()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -620,7 +679,10 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "end = int(input(\"length: \"))\n",
+    "print(\"|...\" * (end + 1), \"|\", sep=\"\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1094,7 +1156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
