--- a/Z04_B_MLE.ipynb
+++ b/Z04_B_MLE.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -225,19 +225,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Desired error not necessarily achieved due to precision loss.\n",
-      "         Current function value: 0.000100\n",
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.000000\n",
       "         Iterations: 1\n",
-      "         Function evaluations: 20\n",
-      "         Gradient evaluations: 2\n",
-      "[ -1.01000000e+00  -7.52508635e-09]\n"
+      "         Function evaluations: 9\n",
+      "         Gradient evaluations: 3\n",
+      "[-1.00000001e+00 -7.45058060e-09]\n"
      ]
     }
    ],
